<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".ActivityMain"
    android:id="@+id/layout_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/relative_layout_padding">
            <ImageView
                android:id="@+id/activity_main_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:scaleType="centerInside"
                android:src="@drawable/bicycle" />
            <View
                android:id="@+id/divider_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:layout_below="@id/activity_main_image"
                android:background="@color/black" />
            <TextView
                android:id="@+id/activity_main_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_below="@id/activity_main_image"
                android:layout_toLeftOf="@+id/activity_main_imagebutton"
                android:layout_alignLeft="@id/activity_main_image"
                android:layout_marginTop="@dimen/title_margin"
                android:layout_marginBottom="@dimen/title_margin"
                style="@style/Title"
                />

            <ImageButton
                android:id="@+id/activity_main_imagebutton"
                android:layout_width="@dimen/imagebutton_size"
                android:layout_height="@dimen/imagebutton_size"
                android:background="@drawable/like"
                android:layout_below="@id/activity_main_image"
                android:layout_alignRight="@id/activity_main_image"
                android:layout_margin="@dimen/button_margin"
                />

            <TextView
                android:id="@+id/activity_main_subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:layout_below="@id/activity_main_title1"
                android:layout_marginTop="@dimen/text_margin"
                style="@style/Subtitle"
                />

            <RadioGroup
                android:id="@+id/activity_main_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_subtitle1"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/activity_main_radiobutton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/radiobutton_margin"
                    android:buttonTint="@color/gray"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/activity_main_radiobutton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/radiobutton_margin"
                    android:buttonTint="@color/brown"
                    />
                <RadioButton
                    android:id="@+id/activity_main_radiobutton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/radiobutton_margin"
                    android:buttonTint="@color/pink"
                    />
                <RadioButton
                    android:id="@+id/activity_main_radiobutton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/radiobutton_margin"
                    android:buttonTint="@color/black"
                    />
            </RadioGroup>
            <LinearLayout
                android:id="@+id/activity_main_layout_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_radiogroup"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/activity_main_button1"
                    android:text="@string/size1"
                    style="@style/Button"

                    />
                <Button
                    android:id="@+id/activity_main_button2"
                    android:text="@string/size2"
                    style="@style/Button"
                    />
                <Button
                    android:id="@+id/activity_main_button3"
                    android:text="@string/size3"
                    style="@style/Button"
                    />
                <Button
                    android:id="@+id/activity_main_button4"
                    android:text="@string/size4"
                    style="@style/Button"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/activity_main_subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_layout_buttons"
                android:text="@string/description"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                style="@style/Subtitle"
                />
            <TextView
                android:id="@+id/activity_main_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_subtitle2"
                android:text="@string/text_description"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                style="@style/Text"
                />
            <TextView
                android:id="@+id/activity_main_subtitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_text1"
                android:text="@string/measurement"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                style="@style/Subtitle"
                />
            <TextView
                android:id="@+id/activity_main_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_subtitle3"
                android:text="@string/text_measurement"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                style="@style/Text"
                />

            <Button
                android:id="@+id/activity_main_button_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_text2"
                android:text="@string/button_add"
                />

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>